# FastAPI_study

./: .env-prod.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  init.py  main.py  pyproject.toml  readme.md  requirements.txt  requirments.txt
auth/: auth.py  database.py  manager.py  schemas.py
docker/: app.sh  web_app.sh
docker/render_com/: Dockerfile
migrations/: env.py
migrations/versions/: 2023-10-05-10-39_068fe04fb331_switch_to_psycopg.py  2023-10-10-08-28_48c5c69a5169_bearer_db_auth_backend_added.py  2023-10-17-10-03_a98310137da9_add_operations.py  2023-10-17-16-23_db93610d9fc3_orm_style_and_common_metadata.py  2023-10-29-09-55_81ea64504d1e_chatmessage_model.py  2023-10-31-16-03_f8b2de93c168_oauth2.py  2023-11-15-15-44_dd1fcee4f1b6_scopes.py  2023-12-04-12-34_c3d98e528d73_initial.py  2023-12-04-16-37_327dfbcbe843_move_to_sqlmodel.py  2023-12-05-08-40_b974fc4d6ffb_heroes.py  2b5530dd28a2_initial.py  de214cc4308c_remove_model_duplicating_and_switch_to_.py
models/: models.py
prometheus_data/: prometheus.yml
src/: auth.py  config.py  config_reader.py  database.py  init_db.py  main.py  models.py  schemas.py  token_service.py
src/api/: dependencies.py  router.py  tasks.py  users.py
src/auth/: base_config.py  dependencies.py  keycloak_dep.py  manager.py  models.py  router.py  schemas.py  utils.py
src/celery_monitor/: monitor.py
src/chat/: manager.py  models.py  router.py  schemas.py
src/chat_v2/: router.py
src/db/: database.py
tests/: conftest.py  test_auth.py  test_chat_v1.py  test_operations.py
(+46 files in other folders)
